--- a/Cohomology of Grassmann Manifold.tex
+++ b/Cohomology of Grassmann Manifold.tex
@@ -138,6 +138,7 @@
 %main document
 \mainmatter
     \include{chapters/intro}
+    \include{chapters/grass_def}
 \backmatter
     \bibliographystyle{alpha}
     \bibliography{bibliography/bibsample}
