Gr(k,n) is a compact top manifold of dim k(n-k)

--- a/Cohomology of Grassmann Manifold.tex
+++ b/Cohomology of Grassmann Manifold.tex
@@ -35,8 +35,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%  CUSTOMIZE THE LOOKS  %%%%%%%%%%%%%%%%%%%
 \geometry{headheight=15pt}
-\setlength\parindent{0pt} %no indentation
-\setlength\parskip{1em} %no indentation
+%\setlength\parindent{0pt} %no indentation
+%\setlength\parskip{1em} %no indentation
 \renewcommand{\theequation}{\arabic{equation}}
 \titleformat{\chapter}[hang]{\bfseries\Huge}{}{0pt}{\thechapter. }
 \titleformat{name=\chapter,numberless}[hang]{\bfseries\Huge}{}{0pt}{}
