--- a/appendices/CW.tex
+++ b/appendices/CW.tex
@@ -14,7 +14,7 @@ such that:
 \displaystyle\coprod_{e\in\pi_0(X_n\setminus{X_{n-1}})}D^n\ar[r,"\coprod_e\Phi_e"']&X_n\\
 \end{tikzcd}
 \end{center}
-where $j_e:S^{n-1}\to D^n$ is the usuall inclusion map and $i_n:X_{n-1}\to X_n$ is the inclusion map given by the filtration.
+where $j_e:S^{n-1}\to D^n$ is the usual inclusion map and $i_n:X_{n-1}\to X_n$ is the inclusion map given by the filtration.
 \end{b_item}
 \end{definition}
 
@@ -29,7 +29,7 @@ A filtration of a topological space $X$, making $X$ a CW-complex is called a \ul
 
 \begin{remarks}
 \begin{i_enum}
-\item The property $X=\varinjlim X_i$ is equivallent to $X=\bigcup_{i\geq-1}X_i$ as a set, equipped with the final topology, with respect to all inclusion maps. In particular, a set $A$ is open (closed) in $X$, iff $A\cap X_i$ is open (closed) in $X_i$ for all $i\geq-1$, or equivallently, $A\cap\sigma$ is open (closed) in $\sigma$ for every open cell $\sigma$ of the CW structure. This property is what we usually refer to as the ``weak topology'' of $X$ (the ``W'' part of the CW).
+\item The property $X=\varinjlim X_i$ is equivalent to $X=\bigcup_{i\geq-1}X_i$ as a set, equipped with the final topology, with respect to all inclusion maps. In particular, a set $A$ is open (closed) in $X$, iff $A\cap X_i$ is open (closed) in $X_i$ for all $i\geq-1$, or equivalently, $A\cap\sigma$ is open (closed) in $\sigma$ for every open cell $\sigma$ of the CW structure. This property is what we usually refer to as the ``weak topology'' of $X$ (the ``W'' part of the CW).
 \item 
 \end{i_enum}
 \end{remarks}
