--- a/appendices/stiefel.tex
+++ b/appendices/stiefel.tex
@@ -45,7 +45,7 @@ We need again the homeomorphism $\Phi:{\left(\mathbb{R}^n\right)}^k\to\mathbb{R}
 \[S:=\left\{A\in\mathbb{R}^{n\times k}:A^t A=I_k\right\}\]
 Then, we have:
 \[\StO{k}{n}=\Phi^{-1}(S)\cong S\]
-$S$ is a subset of $\mathbb{R}^{n\times}$, defined by $\binom{k+1}{2}$ (linearly independant) equations. This makes $S$ a closed submanifold of $\mathbb{R}^{n\times k}$, of dimension $nk-\binom{k+1}{2}$. Thus, $\StO{k}{n}$ is a closed submanifold of ${\left(\mathbb{R}^n\right)}^k$ of the same dimension.
+$S$ is a subset of $\mathbb{R}^{n\times}$, defined by $\binom{k+1}{2}$ (linearly independent) equations. This makes $S$ a closed submanifold of $\mathbb{R}^{n\times k}$, of dimension $nk-\binom{k+1}{2}$. Thus, $\StO{k}{n}$ is a closed submanifold of ${\left(\mathbb{R}^n\right)}^k$ of the same dimension.
 \end{proof}
 
 In this thesis $\St{k}{n}$ and $\StO{k}{n}$ are used in a similar way with $\St{k}{n}$ having the advantage of being open and the Stiefel manifold having the advantage of being compact.
@@ -53,8 +53,7 @@ In this thesis $\St{k}{n}$ and $\StO{k}{n}$ are used in a similar way with $\St{
 \[\left\|f\right\|_2^2=\sum_{i=1}^k\left\|v_i\right\|_2^2=k\]
 \end{remark}
 
-\begin{lemma}\label{lem:StO_compact} Let $0<k\leq n$ be some natural numbers. Then $\StO{k}{n}$ is compact. Indeed the previous Proposition and Remark prove that $\StO{k}{n}$ is a closed and bounded subset of ${\left(\mathbb{R}^n\right)}^k\cong\mathbb{R}^{kn}$, which proves the asertion.
+\begin{lemma}\label{lem:StO_compact} Let $0<k\leq n$ be some natural numbers. Then $\StO{k}{n}$ is compact. Indeed the previous Proposition and Remark prove that $\StO{k}{n}$ is a closed and bounded subset of ${\left(\mathbb{R}^n\right)}^k\cong\mathbb{R}^{kn}$, which proves the assertion.
 \end{lemma}
-%TODO(needed in Lemma 1.3)
 
 
