--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -5,3 +5,8 @@
 	year = "1974",
 }
 
+@book{vec_bundles,
+	author = "{Hatcher Allen}",
+	title = "{Vector Bundles and K-Theory}",
+	year = "2017",
+}
